<?xml version="1.0"?>
<package format="2">
  <name>rviz_voxelgrid_visuals</name>
  <version>0.0.0</version>
  <description>Tools for visualizing shape completion results in RViz</description>

  <maintainer email="brad.saund@gmail.com">bsaund</maintainer>
  <license>BSD</license>

  <depend>roscpp</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>arm_rviz_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
